--- a/platform.config
+++ b/platform.config
@@ -1,9 +1,3 @@
 {"id": 0,
-"usb_map": [
-  0,
-  1,
-  2,
-  3,
-  4,
-  5]
+"usb_map": {"52730":0, "52738":1, "52727":2, "52732":3, "52731":4, "52739":5}
 }
